Issue #3316388: Spacing in media widget is off

--- a/styles/components/media_library.scss
+++ b/styles/components/media_library.scss
@@ -198,10 +198,6 @@ fieldset.media-library-widget {
     padding: var(--gin-spacing-xs);
   }
 
-  .fieldset__wrapper {
-    margin-bottom: 0;
-  }
-
   .media-library {
     &-edit__link,
     &-item .media-library-item__edit,
